--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-cookie-disclaimer",
-  "version": "2.1.0",
+  "name": "react-cookie-consent-notification",
+  "version": "1.0.0",
   "description": "The package will help you to display a notification about the use of cookies on the site",
   "main": "./dist/index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/awibox/react-cookie-disclaimer.git"
+    "url": "git+https://github.com/awibox/react-cookie-consent-notification.git"
   },
   "keywords": [
     "cookies",
@@ -24,9 +24,9 @@
   "author": "awibox",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/awibox/react-cookie-disclaimer/issues"
+    "url": "https://github.com/awibox/react-cookie-consent-notification/issues"
   },
-  "homepage": "https://github.com/awibox/react-cookie-disclaimer#readme",
+  "homepage": "https://github.com/awibox/react-cookie-consent-notification#readme",
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
