--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-cookie-consent-notification",
   "version": "1.0.0",
-  "description": "The package will help you to display a notification about the use of cookies on the site",
+  "description": "The package will help you display a notification of consent to the use of cookies on the site",
   "main": "./dist/index.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -16,10 +16,10 @@
     "url": "git+https://github.com/awibox/react-cookie-consent-notification.git"
   },
   "keywords": [
-    "cookies",
-    "disclaimer",
     "react-component",
-    "npm-package"
+    "cookie-consent",
+    "npm-package",
+    "notification"
   ],
   "author": "awibox",
   "license": "MIT",
